k8s-manifests/development/flattrack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flattrack
  namespace: flattrack-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flattrack
  template:
    metadata:
      labels:
        app: flattrack
    spec:
      automountServiceAccountToken: false
      containers:
      - name: flattrack
        image: registry.gitlab.com/flattrack/flattrack:latest
        # command:
        #   - "/bin/sleep"
        #   - "10000000"
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 20
