k8s-manifests/development/flattrack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flattrack
  namespace: flattrack-dev
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: flattrack
